config-service/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rujfyls
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: "/user-service"
            backend:
              service:
                name: user-service
                port:
                  number: 80
          - pathType: Prefix
            path: "/case-service"
            backend:
              service:
                name: case-service
                port:
                  number: 80
          - pathType: Prefix
            path: "/admin-service"
            backend:
              service:
                name: admin-service
                port:
                  number: 80
